--- a/index.ipynb
+++ b/index.ipynb
@@ -333,7 +333,7 @@
    },
    "outputs": [],
    "source": [
-    "in\"7285553334\" # 7285553335"
+    "int(\"7285553334\") # 7285553335"
    ]
   },
   {
